BUG#39598 Valgrind warnings in backup_functions and backup_procedures

Patch refactors prepare_path() method in stream class to use 
standard server methods instead of processing paths manually.